[package]
authors = ["Alessandro Candido <candido.ale@gmail.com>"]
description = "Partons python bindings"
name = "partons-py"
readme = "../README.md"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.maturin]
name = "partons"

[lib]
name = "partons"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15.3"
numpy = "0.16.2"
partons = { path = "../partons", version = "0.0.1" }
pyo3 = { features = ["extension-module"], version = "0.16.4" }
