[package]
authors = ["Alessandro Candido <candido.ale@gmail.com>"]
description = "Partons library"
name = "partons"
readme = "../README.md"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
bytes = { version = "1.3.0", features = ["serde"] }
csv = "1.2.2"
directories = "4.0"
flate2 = "1.0.26"
itertools = "0.10.5"
lazy_static = "1.4.0"
ndarray = { version = "0.15.6", features = ["serde"] }
regex = "1.8.4"
reqwest = "0.11.13"
serde = { version = "1.0.151", features = ["derive"] }
serde_yaml = "0.9.16"
tar = "0.4.38"
thiserror = "1.0"
tokio = { version = "1.23.0", features = ["full"] }
toml = "0.5.10"
